--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Password Generator</h1>
+        <h1>Password Randomizer</h1>
       </header>
       <div class="card">
         <div class="card-header">
-          <h2>Generate a Password</h2>
+          <h2>Unique Password Below</h2>
         </div>
         <div class="card-body">
           <textarea
             readonly
             id="password"
-            placeholder="Your Secure Password"
+            placeholder="Secure Password"
             aria-label="Generated Password"
           ></textarea>
         </div>
